[gd_scene load_steps=16 format=3 uid="uid://7lumd01nbkqs"]

[ext_resource type="Texture2D" uid="uid://0q4l3vxtphvt" path="res://Enemies/Bat.png" id="1_m3dwt"]
[ext_resource type="Script" path="res://Enemies/Bat.gd" id="1_qqijn"]
[ext_resource type="Texture2D" uid="uid://dpj6awg4epvmn" path="res://Shadows/SmallShadow.png" id="2_qcxbl"]
[ext_resource type="PackedScene" uid="uid://dup2vkkck3yhw" path="res://Overlap/Hurtbox.tscn" id="3_l3q4d"]
[ext_resource type="PackedScene" uid="uid://c0nbn7nlx3j7h" path="res://Stats.tscn" id="4_drj8g"]
[ext_resource type="PackedScene" uid="uid://cxu3pqvvdwwps" path="res://Overlap/PlayerDetectionZone.tscn" id="6_d261f"]

[sub_resource type="AtlasTexture" id="AtlasTexture_7de8p"]
atlas = ExtResource("1_m3dwt")
region = Rect2(0, 0, 16, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_nl032"]
atlas = ExtResource("1_m3dwt")
region = Rect2(16, 0, 16, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_krvbl"]
atlas = ExtResource("1_m3dwt")
region = Rect2(32, 0, 16, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_0lb18"]
atlas = ExtResource("1_m3dwt")
region = Rect2(48, 0, 16, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_yi7c4"]
atlas = ExtResource("1_m3dwt")
region = Rect2(64, 0, 16, 24)

[sub_resource type="SpriteFrames" id="SpriteFrames_lsh1o"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_7de8p")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nl032")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_krvbl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0lb18")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_yi7c4")
}],
"loop": true,
"name": &"Fly",
"speed": 10.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_7f68y"]
radius = 4.0

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_k2s6k"]
radius = 7.0
height = 18.0

[sub_resource type="CircleShape2D" id="CircleShape2D_byiyn"]
radius = 75.0

[node name="Bat" type="CharacterBody2D"]
collision_layer = 32
script = ExtResource("1_qqijn")
ACCELERATION = 125
MAX_SPEED = 50
FRICTION = 150

[node name="AnimatedSprite" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_lsh1o")
animation = &"Fly"
autoplay = "Fly"
frame = 3
frame_progress = 0.854741
offset = Vector2(0, -12)

[node name="ShadowSprite" type="Sprite2D" parent="."]
texture = ExtResource("2_qcxbl")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_7f68y")

[node name="Stats" parent="." instance=ExtResource("4_drj8g")]
max_health = 2

[node name="Hurtbox" parent="." instance=ExtResource("3_l3q4d")]
collision_layer = 8
collision_mask = 16

[node name="CollisionShape2D" parent="Hurtbox" index="0"]
position = Vector2(0, -13)
shape = SubResource("CapsuleShape2D_k2s6k")

[node name="PlayerDetectionZone" parent="." instance=ExtResource("6_d261f")]

[node name="CollisionShape2D" parent="PlayerDetectionZone" index="0"]
modulate = Color(1, 1, 1, 0.498039)
shape = SubResource("CircleShape2D_byiyn")

[connection signal="no_health" from="Stats" to="." method="_on_stats_no_health"]
[connection signal="area_entered" from="Hurtbox" to="." method="_on_hurtbox_area_entered"]

[editable path="Hurtbox"]
[editable path="PlayerDetectionZone"]
